# gotham-module-services

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
src/lib/: Makefile.mk
src/modules/: Makefile.mk
src/modules/services/: command.c  command_win32.c  conf.c  event.c  services.c  services.h
